[gd_scene load_steps=3 format=3 uid="uid://nroli72qd4qe"]

[ext_resource type="Script" path="res://scenes/interactable/interactable.gd" id="1_ejm47"]
[ext_resource type="PackedScene" uid="uid://bke5qh3b8dd61" path="res://scenes/levels/objects/InteractIcon.tscn" id="2_n4ft6"]

[node name="InteractArea" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_ejm47")

[node name="InteractIcon" parent="." instance=ExtResource("2_n4ft6")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
